<resources>
    <string name="title">NiLS</string>
    <string name="settingstitle">NiLS Settings</string>
    <string name="accessibility_service_description">Enable to allow NiLS receive all incoming notifications. The disclaimer displayed when enabling the accessibility service is a standard Android message. This app DOES NOT collect any of your data. Please note that this app doesn\'t have internet access permission so it actually cannot send the data anywhere.</string>
    <string name="notifications_service">NiLS Service</string>
    <string name="generalsettings">General Settings</string>
    <string name="advancedsettings">Advanced Settings</string>
    <string name="behavior">Auto Wake up</string>
    <string name="appearance">Appearance</string>
    <string name="advanced">Advanced</string>
    <string name="notifications">Notifications</string>
    <string name="turnscreenon">Turn on screen</string>
    <string-array name="wakeup_mode_entries">
        <item>Never</item>
        <item>Only if the device is not covered</item>
        <item>Next time the device is uncovered</item>
        <item>Always</item>
    </string-array>
    <string-array name="wakeup_mode_values">
        <item>never</item>
        <item>when_not_covered</item>
        <item>when_uncovered</item>
        <item>always</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clearonunlock">Clear when unlocked</string>
    <string name="clearonunlock_summary">Clear all notifications when device is unlocked</string>
    <string name="clearonlock">Clear when locked</string>
    <string name="clearonlock_summary">Clear all notifications when device is locked</string>
    <string name="collectonunlock">Collect when unlocked</string>
    <string name="collectonunlock_summary">Keep collecting notifications when device is unlocked</string>
    <string name="order_notifications_by">Sort notifications by</string>
    <string name="clear_all_from_same_app">Clear all from the same app</string>
    <string name="clear_all_from_same_app_summary">When a notification is opened, clear all of the remaining notifications from the same app</string>
    <string-array name="notification_modes_entries">
        <item>Grouped (like on Android notifications bar)</item>
        <item>Separated (like on iPhone)</item>
    </string-array>
    <string-array name="notification_modes_values" translatable="false">
        <item>grouped</item>
        <item>separated</item>
    </string-array>
    <string-array name="notification_icon_entries">
        <item>Notification Large Icon</item>
        <item>Notification Monochrome Icon</item>
        <item>App Icon (Coloured)</item>
    </string-array>
    <string-array name="notification_icon_values" translatable="false">
        <item>notification_icon</item>
        <item>mono_icon</item>
        <item>app_icon</item>
    </string-array>
    <string-array name="icon_pack_entries">
        <item>None</item>
    </string-array>
    <string-array name="icon_pack_values" translatable="false">
        <item>none</item>
    </string-array>
    <string name="when_cleared">When cleared from notifications bar</string>
    <string name="when_app_is_opened">When notification app is opened</string>
    <string name="when_device_is_unlocked">When device unlocked</string>
    <string name="sync_back">Sync back notifications</string>
    <string name="sync_back_summary">When notification is cleared on NiLS dismiss it also on Android Notifications Bar (Android 4.3 and above only)</string>
    <string-array name="settings_orderby_entries">
        <item>Newest first</item>
        <item>Oldest first - NiLS widget only</item>
        <item>Priority - NiLS widget only</item>
    </string-array>
    <string-array name="settings_orderby_values" translatable="false">
        <item>time</item>
        <item>timeasc</item>
        <item>priority</item>
    </string-array>
    <string name="experimental">Experimental </string>
    <string name="max_lines">Maximum text lines</string>
    <string name="show_full_notification">Show full notification content</string>
    <string name="show_full_notification_summary">Show full notification content as it appears on notifications bar</string>
    <string name="sync_notifications">Sync with notifications bar</string>
    <string name="clear_app_notifications">Clear when app is opened</string>
    <string name="clear_app_notifications_summary">Automatically clear app notifications when it launched. (Not available on 4.3 or later)</string>
    <string name="disable_auto_switch_summary">Disable auto switch between LS Collapsed and LS Expanded presets on Android 4.2 lock screen</string>
    <string name="disable_auto_switch">Disable auto switch preset</string>
    <string name="force_clear_on_open">Clear notifications when opened</string>
    <string name="force_clear_on_open_summary">Forcibly clear notification when it opened even if the app hasn\'t clear it by itself</string>
    <string-array name="sync_notifications_entries">
        <item>Disabled</item>
        <item>One-way sync</item>
        <item>Two-way sync (Android 4.3+)</item>
        <item>Smart (Two-way + History)</item>
    </string-array>
    <string-array name="sync_notifications_values" translatable="false">
        <item>none</item>
        <item>oneway</item>
        <item>twoway</item>
        <item>smart</item>
</string-array>
    <string-array name="max_lines_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="max_lines_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>999</item>
    </string-array>
    <string name="service_inactive_text">Service is inactive. Tap on the alert icon to go to Android Settings, then enable \"NiLS Service\" from the list.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">NiLS</string>
    <string name="tutorial_help_1">NiLS need to get access to your notifications.\nPlease follow instructions below to enable NiLS service on Android settings.</string>
    <string name="tutorial_instructions">Instructions:</string>
    <string name="tutorial_step_1">Click the button below to open Android settings</string>
    <string name="tutorial_step_2">Find \"NiLS Service\" in the list and enable it</string>
    <string name="tutorial_step_3">Click \"OK\" in the warning dialog</string>
    <string name="tutorial_step_4">Click \"Back\" button to return to NiLS settings</string>
    <string name="about_title">NiLS</string>
    <string name="about_subtitle">NiLS is developed by Roymam</string>
    <string name="about_content">The project is hosted on:\nhttp://code.google.com/p/notifications-widget/\nFeel free to open issues for any bug report or feature request</string>
    <string name="about_contactus_title">Contact us</string>
    <string name="about_contactus_email">mailto:support@roymam.com</string>
    <string name="about_close">Close</string>
    <string name="contact_summary">Contact us to ask a question, request a feature or report a bug</string>
    <string name="contact_ask">Ask a question</string>
    <string name="contact_request">Request a Feature</string>
    <string name="contact_report">Report a Bug</string>
    <string name="contact_request_link" translatable="false">https://roymam.atlassian.net/secure/CreateIssue.jspa?pid=10000&amp;issuetype=2</string>
    <string name="contact_report_link" translatable="false">https://roymam.atlassian.net/secure/CreateIssue.jspa?pid=10000&amp;issuetype=1</string>
    <string name="version">Version</string>
    <string name="widget_locker_not_installed">WidgetLocker is not installed</string>
    <string name="widget_locker_not_installed_summary">Your Android version is lower than 4.2, therefore you cannot add widgets to your standard lockscreen.\n\nHowever, there is a paid app called \"WidgetLocker\" that enables adding widgets to a lockscreen.\n\nNiLS is known to work relatively well with WidgetLocker, but some features may not be working.\n\nPlease note that you can still use NiLS as a standard widget for you home screen without purchasing WidgetLocker</string>
    <string name="widget_locker_purchase">Purchase WidgetLocker</string>
    <string name="no_widget_locker_add_widget">Add NiLS as a widget for your home screen (if you want to add it to your lockscreen you will need to purchase WidgetLocker app from Google Play Store)</string>
    <string name="failed_to_monitor_clear_button">Failed to Monitor \"Clear Notifications\" button</string>
    <string name="settings">Settings</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="app_specific_settings_title">App Specific Settings</string>
    <string name="ignore_notifications">Ignore this app</string>
    <string name="ignore_notifications_summary">ignore all notifications from this app</string>
    <string name="show_only_last_notification">Keep only last notification</string>
    <string name="persistent_notifications">Persistent Notifications</string>
    <string name="action_bar">Action Bar</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="widget_help_title">How to add NiLS to the Lock Screen?</string>
    <string name="widget_help_summary">Requires Android 4.2 and above, might be different on variant devices</string>
    <string name="widget_help_step_1_title">1. Lock your screen</string>
    <string name="widget_help_step_1_body">Lock your screen manually using the device power button</string>
    <string name="widget_help_step_2_title">2. Remove the clock widget</string>
    <string name="widget_help_step_2_body">Expand the default clock widget by dragging it down, then long press it and drag it up to the \'X Remove\' label\nIf you have Samsung Galaxy S4 You\'ll need first to enable \'Multiple Widgets\' on \'Device Settings\' > \'Lock Screen\'</string>
    <string name="widget_help_step_3_title">3. Click on the + Button</string>
    <string name="widget_help_step_3_body">After removing the clock, a + button will appear, click on it.</string>
    <string name="widget_help_step_4_title">4. Add NiLS Widget</string>
    <string name="widget_help_step_4_body">Choose NiLS widget from the list. this will add it as your lock screen widget.</string>
    <string name="nilsfp_title">Floating Notifications Panel</string>
    <string name="nilsfp_description">NiLS Floating Panel is an extension that creates a floating notifications panel over your lock screen</string>
    <string name="main_features">Main Features:</string>
    <string name="nilsfp_feature_1">Provides swiping gestures such as Swipe to dismiss</string>
    <string name="nilsfp_feature_2">Highly customizable and supports beautiful 3rd-party themes</string>
    <string name="nilsfp_feature_3">Runs on top of the lock screen without the need of lock screen widgets support</string>
    <string name="nilsfp_feature_4">Works with almost any lock screen including WidgetLocker, GoLocker, Cover and all of the stock lock screens</string>
    <string name="nilsfp_getit">Get it Now!</string>
    <string name="open_android_settings">Open Android Settings</string>
    <string name="tutorial_step_1_title">Enable NiLS Service</string>
</resources>