<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen android:title="@string/contact_ask" android:key="askquestion">
        <intent android:action="android.intent.action.VIEW"
            	android:data="@string/about_contactus_email"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/contact_request" android:key="requestfeature">
                <intent android:action="android.intent.action.VIEW"
            	android:data="@string/contact_request_link"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/contact_report" android:key="reportbug">
                <intent android:action="android.intent.action.VIEW"
            	android:data="@string/contact_report_link"/>        
    </PreferenceScreen>
   
</PreferenceScreen>