<?xml version="1.0" encoding="utf-8"?>
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsGeneralFragment"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/generalsettings" />
    
    <header 
            android:icon="@drawable/hardware_phone"
            android:title="@string/appearance">
            	<intent android:targetPackage="com.roymam.android.notificationswidget"
        		android:targetClass="com.roymam.android.notificationswidget.AppearanceActivity" />
            </header>
    
    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsAppSpecificFragment"
        	android:icon="@drawable/apps"
            android:title="@string/app_specific_settings_title" />
    
    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsPersistentNotificationsFragment"
        	android:icon="@android:drawable/stat_notify_sync_noanim"
            android:title="@string/persistent_notifications" />

    <header android:fragment="com.roymam.android.notificationswidget.SettingsActivity$PrefsAdvancedFragment"
        	android:icon="@drawable/advanced"
            android:title="@string/advancedsettings" />

</preference-headers>