<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_help_title"
                android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_help_summary"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="16dp"
                android:text="@string/widget_help_step_1_title"
                android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_help_step_1_body"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_help_step_2_title"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_help_step_2_body"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

        <ImageView
                android:layout_width="160dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_delete"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_help_step_3_title"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_help_step_3_body"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_plus"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/widget_help_step_4_title"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/widget_help_step_4_body"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

        <ImageView
                android:layout_width="160dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_widget_add"/>
    </LinearLayout>
</ScrollView>